--- a/cui.css
+++ b/cui.css
@@ -6,9 +6,9 @@
 @font-face {
   font-family: 'OUR-FONT-ICON';
   src:
-    url('fonts/OUR-FONT-ICON.ttf?nd57hh') format('truetype'),
-    url('fonts/OUR-FONT-ICON.woff?nd57hh') format('woff'),
-    url('fonts/OUR-FONT-ICON.svg?nd57hh#OUR-FONT-ICON') format('svg');
+    url('fonts/OUR-FONT-ICON.ttf?5gzcad') format('truetype'),
+    url('fonts/OUR-FONT-ICON.woff?5gzcad') format('woff'),
+    url('fonts/OUR-FONT-ICON.svg?5gzcad#OUR-FONT-ICON') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -17,7 +17,7 @@
 [class^="OFI-"], [class*=" OFI-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'OUR-FONT-ICON' !important;
-  speak-as: never;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -28,6 +28,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 
 @media (prefers-color-scheme: dark) {
